# SemanticClipboard

./: Cargo.toml  README.md  build_rpm.sh  project_details.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  release.yml
assets/: SemanticClipboard.cer
linux/: SemanticClipboard.desktop
nsis/: installer.nsi
src/: clipboard.rs  db.rs  main.rs  ml.rs  ui.rs
wix/: cert.wxs
